Fix minor email alignment issues

--- a/app/assets/stylesheets/common/communicarts.css.scss
+++ b/app/assets/stylesheets/common/communicarts.css.scss
@@ -4,6 +4,11 @@
 
 
 table {
+
+  &.data_container {
+    margin-top: 15px;
+  }
+
   border-spacing: 0;
 }
 
